# C-projects

./: README.md  cpp-ci.yml
.github/workflows/: c-cpp.yml
Game of life/: CMakeLists.txt  README.md  Responses.md  tree.md
Game of life/GolLib/include/: GolGrid.h  GolIterator.h
Game of life/GolLib/source/: CMakeLists.txt  GolGrid.cpp  GolIterator.cpp
Game of life/app/: CMakeLists.txt  GolSimulator.cpp  GolSimulatorMPI.cpp  GolStillLifeFinder.cpp
Game of life/app/outputs/: 7x7_15_420_rand_4.txt  7x7_15_420_rand_4_MPI.txt  glider26_MPI.txt  glider_26.txt  p138-oscillator_MPI_138.txt  p138-oscillator_MPI_69.txt
Game of life/benchmark/: CMakeLists.txt  GolBenchmarks.cpp
Game of life/test/: CMakeLists.txt  GolTests.cpp
Game of life/test/data/: glider_badcell.txt  glider_badgrid.txt
Image reconstruction/: CMakeLists.txt
Image reconstruction/21144123/COMP0210Assignment1/: README.md  Responses.md
Image reconstruction/21144123/COMP0210Assignment1/Optimisation/include/: DifferentiableFunction.h  NonDifferentiableFunction.h  OptimisationUtils.h  VectorUtils.h
Image reconstruction/21144123/COMP0210Assignment1/app/: CMakeLists.txt  ImageReconstructor
Image reconstruction/21144123/COMP0210Assignment1/images/: UtahTeapot_blurred.pgm  UtahTeapot_convolved_dirty.pgm
Image reconstruction/21144123/COMP0210Assignment1/test/: CMakeLists.txt  TestOptimisation.cpp
Image reconstruction/21144123/COMP0210Assignment1/test/data/testing_images/: TestSphere.pgm  TestSphere_blurred.pgm  TestSphere_deblurred.pgm
Image reconstruction/Optimisation/include/: DataPack.h  ImageUtils.h  LinearOperator.h
Image reconstruction/Optimisation/src/: CMakeLists.txt  ImageUtils.cpp  OptimisationUtils.cpp
Image reconstruction/app/: FrequencyReconstructor.cpp  ImageReconstructor.cpp
Image reconstruction/images/: UtahTeapot_Convolution_Optimised.pgm  UtahTeapot_convolved_reconstructed.pgm
Image reconstruction/test/: CMakeLists.txt
Image reconstruction/test/data/images/: TestSphere.pgm  TestSphere_convolved.pgm  TestSphere_deconvolved.pgm
Image reconstruction/test/data/testing_images/: TestSphere_Reconstructed.pgm  TestSphere_sub_sampled.pgm
